# shared_note

./: .gitignore  Launch Shared Note.bat  README.md  pyproject.toml  shared_note.py
shared_note/: __init__.py  __main__.py  db.py  mime.py  models.py  preview.py  server.py  storage.py
shared_note/static/: app.js  index.html  style.css
tests/: test_api.py  test_db.py  test_ui.py
